[package]
name = "rppico_interface"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
rp-pico = "0.9.0"
rp2040-hal = "0.10.2"
rp2040-pac = "0.6.0"
agc_emulator = { path = "../agc_emulator" }
lcd-lcm1602-i2c = "0.3.0"

[lints.rust]
unused_mut = "allow"
unused_variables = "allow"
unused_must_use = "allow"

